Fixing all broken