@@ -22,8 +22,7 @@ import io.supertokens.pluginInterface.exceptions.InvalidConfigException;
 import io.supertokens.utils.ConfigMapper;
 import org.junit.Test;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.fail;
+import static org.junit.Assert.*;
 
 public class ConfigMapperTest {
 
@@ -47,7 +46,7 @@ public class ConfigMapperTest {
         boolean bool_property;
 
         @JsonProperty
-        Long nullable_long_property = new Long(-1);
+        Long nullable_long_property = (long) -1;
     }
 
     @Test
@@ -60,7 +59,7 @@ public class ConfigMapperTest {
             assertEquals(-1, ConfigMapper.mapConfig(config, DummyConfig.class).float_property, 0.0001);
             assertEquals(-1, ConfigMapper.mapConfig(config, DummyConfig.class).double_property, 0.0001);
             assertEquals("default_string", ConfigMapper.mapConfig(config, DummyConfig.class).string_property);
-            assertEquals(new Long(-1), ConfigMapper.mapConfig(config, DummyConfig.class).nullable_long_property);
+            assertEquals(Long.valueOf(-1), ConfigMapper.mapConfig(config, DummyConfig.class).nullable_long_property);
         }
 
         // valid for int
@@ -136,27 +135,27 @@ public class ConfigMapperTest {
         {
             JsonObject config = new JsonObject();
             config.addProperty("bool_property", "true");
-            assertEquals(true, ConfigMapper.mapConfig(config, DummyConfig.class).bool_property);
+            assertTrue(ConfigMapper.mapConfig(config, DummyConfig.class).bool_property);
         }
         {
             JsonObject config = new JsonObject();
             config.addProperty("bool_property", "TRUE");
-            assertEquals(true, ConfigMapper.mapConfig(config, DummyConfig.class).bool_property);
+            assertTrue(ConfigMapper.mapConfig(config, DummyConfig.class).bool_property);
         }
         {
             JsonObject config = new JsonObject();
             config.addProperty("bool_property", "false");
-            assertEquals(false, ConfigMapper.mapConfig(config, DummyConfig.class).bool_property);
+            assertFalse(ConfigMapper.mapConfig(config, DummyConfig.class).bool_property);
         }
         {
             JsonObject config = new JsonObject();
             config.addProperty("bool_property", true);
-            assertEquals(true, ConfigMapper.mapConfig(config, DummyConfig.class).bool_property);
+            assertTrue(ConfigMapper.mapConfig(config, DummyConfig.class).bool_property);
         }
         {
             JsonObject config = new JsonObject();
             config.addProperty("bool_property", false);
-            assertEquals(false, ConfigMapper.mapConfig(config, DummyConfig.class).bool_property);
+            assertFalse(ConfigMapper.mapConfig(config, DummyConfig.class).bool_property);
         }
 
         // valid for string
@@ -189,20 +188,20 @@ public class ConfigMapperTest {
         {
             JsonObject config = new JsonObject();
             config.add("string_property", null);
-            assertEquals(null, ConfigMapper.mapConfig(config, DummyConfig.class).string_property);
+            assertNull(ConfigMapper.mapConfig(config, DummyConfig.class).string_property);
         }
 
         // valid for nullable long
         {
             JsonObject config = new JsonObject();
             config.add("nullable_long_property", null);
-            assertEquals(null, ConfigMapper.mapConfig(config, DummyConfig.class).nullable_long_property);
+            assertNull(ConfigMapper.mapConfig(config, DummyConfig.class).nullable_long_property);
         }
 
         {
             JsonObject config = new JsonObject();
             config.addProperty("nullable_long_property", 100);
-            assertEquals(new Long(100), ConfigMapper.mapConfig(config, DummyConfig.class).nullable_long_property);
+            assertEquals(Long.valueOf(100), ConfigMapper.mapConfig(config, DummyConfig.class).nullable_long_property);
         }
     }
 
@@ -232,13 +231,13 @@ public class ConfigMapperTest {
                 "abcd", // int
                 "", // int
                 true, // int
-                new Double(4.5), // int
-                new Long(1234567892342l), // int
+                4.5d, // int
+                1234567892342L, // int
 
                 "abcd", // long
                 "", // long
                 true, // long
-                new Double(4.5), // long
+                4.5d, // long
 
                 "abcd", // float
                 "", // float
